--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -27,3 +27,10 @@ linter:
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+
+analyzer:
+  exclude:
+    - '**.g.dart'
+    - '**.gr.dart'
+    - '**.gform.dart'
+    - '**.freezed.dart'
