--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,9 +44,10 @@ dependencies:
   reactive_forms: ^14.3.0
   reactive_forms_annotations: ^1.1.0
   riverpod_annotation: ^2.1.1
-  riverpod_lint: ^1.3.2
   very_good_analysis: ^5.0.0+1
   retrofit: ^4.0.1
+  freezed: ^2.3.5
+  freezed_annotation: ^2.2.0
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,7 @@ dev_dependencies:
   json_serializable: ^6.7.0
   retrofit_generator: ^7.0.1
   riverpod_generator: ^2.2.3
+  riverpod_lint: ^1.3.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
