--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=D:\\Programacion\\Sdk
-flutter.sdk=D:\\Programacion\\flutter
+sdk.dir=/Users/home/Library/Android/sdk
+flutter.sdk=/Users/home/Documents/Datos/Programacion/software/flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
