--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   readmore: ^2.2.0
   flutter_gen_runner: ^5.3.1
   flutter_svg: ^2.0.6
+  html: ^0.15.4
 
 dev_dependencies:
   flutter_test:
@@ -87,6 +88,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/
+    - assets/jpeg/
+    - assets/gif/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
