--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   flutter_gen_runner: ^5.3.1
   flutter_svg: ^2.0.6
   html: ^0.15.4
+  flutter_hooks: ^0.18.6
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
